--- a/Project_Files/index.html
+++ b/Project_Files/index.html
@@ -1,1 +1,66 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="shortcut icon" href="/img/image-removebg-preview.png">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+        <title>System Unit</title>
+    </head>
+    <!-- THIS IS A BODY -->
+    <body>
+        <header>
+            <div class="header">
+                <header class="logo">Tech Squad</header>
+                <div class="header-right">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="members.html">Our Members</a>
+                    <a href="journey.html">The Journey</a>
+                    <a href="learn.html">What We Learnt</a>
+                    <a href="product.html">Our Product</a>
+                </div>
+            </div>
+        </header>
+        <section class="section1">
+            <div class="firstsec">
+                <h1>What is Tech Squad?</h1>
+                <h3>Tech Squad is a website dedicated to understanding further about the System Unit</h3>
+            </div>
+        </section>
+        <section class="section2">
+            <div class="secondsec">
+                <h1>A Learning Experience</h1>
+                <h3>Through this website, you will be able to learn all the components within the system unit.</h3>
+                <br>
+                <p>Venture deep into the processes of the CPU, learn the intense capabilities of RAM. Identify what is needed for a proper
+                    <br>functioning System Unit. This site aims to nurture aspiring Computer Science students to be familiar with the
+                    <br>system that enables their very future.
+                </p>
+            </div>
+        </section>
+        <section class="section3">
+            <div class="thirdsec">
+                <h1>What could I expect from this website?</h1>
+                <h3>This website hopes to educate users regarding the very system that allows them to view this website.</h3>
+                <br>
+                <p>This website features an in-depth explanation and essay regarding the System Unit. Click "About" for more.
+                <br>This website also showcases a special video representing the components within the System Unit. Click "Our Product" for more.
+                <br>This website also shares our experience in making said video so that users may be encouraged to further study this topic in their own style.
+                    Click "The Journey" to view our whole process.
+                </p>
+            </div>
+        </section>
+        <footer>
+            <h4>Contact for Queries:</h4>
+            <p>Email: SHAWN.HUANG.QI@student.mmu.edu.my</p>
+            <p>Phone Number: +60162510502</p>
+            <br>
+            <p>Site and study done in fulfilment of course requirements at Multimedia University</p>
+            <br>
+            <p>©Tech Squad Malaysia Sdn Bhd - All Rights Reserved</p>
+        </footer>
+    </body>
+</html>
