--- a/Project_Files/learn.html
+++ b/Project_Files/learn.html
@@ -23,7 +23,29 @@
                 </div>
             </div>
         </header>
-        <h1>What we Learnt</h1>
+        <section class="section1" style="background: url(img/bg10.png); background-position: center;">
+            <div class="firstsec">
+                <h1>What we Learnt</h1>
+                <h3>There is many things we have learnt during this roleplay and this is a small conclusion for it.</h3>
+            </div>
+        </section>
+        <div class="learnDesc">
+            <div class="shadow">
+                <h2>Editing</h2>
+            </div>
+            <div class="shadow">
+                <h2>Voice Acting</h2>
+            </div>
+            <div class="shadow">
+                <h2>Web Design</h2>
+            </div>
+            <div class="shadow">
+                <h2>Team Coordination</h2>
+            </div>
+            <div class="shadow">
+                <h2>Responsibility</h2>
+            </div>
+        </div>
         <footer>
             <h4>Contact for Queries:</h4>
             <p>Email: SHAWN.HUANG.QI@student.mmu.edu.my</p>
