--- a/Project_Files/journey.html
+++ b/Project_Files/journey.html
@@ -23,7 +23,79 @@
                 </div>
             </div>
         </header>
-        <h1>Our Journey</h1>
+        <section class="section1" style="background: url(img/bg9.jpg); background-position: center;">
+            <div class="firstsec">
+                <h1>Our Journey</h1>
+                <h3>Documenting the timeline of activities and the obstacles that we overcame</h3>
+            </div>
+        </section>
+        <div class="seperate">
+            <div class="journey">
+                <div class="journeytext">
+                    <h2>The Video</h2>
+                    <h3>Planning the video</h3>
+                    <p>We embarked on an engaging exploration of computer system units, aiming to highlight their importance in a fun and creative way. After brainstorming various ideas, we settled on creating a lively PNG animation video featuring the system units engaged in a spirited debate about who holds the title of ‘most crucial.’</p>
+                    <br>
+                    <h3>Gathering the necessary Assets</h3>
+                    <p>To bring our vision to life, we had to obtain digital illuxstrations of each system unit, ensuring that their appearance and personality aligned seamlessly with their respective voiceovers.
+                    In order to achieve this, we managed to arrange a commission with an artist who chose to remain unnamed.
+                    Additionally, we gathered additional images such a background pictures and other more that would improve our video viewing experience.
+                    Afterwards, we compiled them all into one folder and proceeded for the editing.</p>
+                    <br>
+                    <h3>Audio</h3>
+                    <p>Each one of us recorded our audios for the video. The details of who voiced who can be found in "Our Members" pages.
+                    We edited each audio through a software called Audacity to enhance clarity and impact.</p>
+                    <br>
+                    <h3>Editing</h3>
+                    <p>Editing was done by Shawn through a software called VSDC Editor.
+                    Editing was by far the longest process of the entire video production as each clip must be examined to provide a perfect video.
+                    Most of our free time was spent on the editing and many reattempts was done to ensure a high-quality video would be produced.
+                    Along the way, many aspects of editing had to be learnt for the first time and it certainly thought us more things about it.
+                    For example, applying many video effects such as gaussian blurring and a type-writer effect for the opening sequence.</p>
+                    <br>
+                    <h3>Publishing</h3>
+                    <p>Once everything was polished and perfected, we proudly shared our work by uploading it to YouTube
+                    The title and description was carefully written so as to encapsulate the true meaning behind our video and to also gain the attention of our intended audience
+                    We added subtitles in both English and Malay to widen our audience even further and also to ensure viewers are able to understand the video
+                    These subtitles also help viewers who suffer from disabilities such as deafness.</p>
+                    <p>Lastly, we did not forget to share the references we used for the video.</p>
+                    <br>
+                </div>
+                <div class="journeyimg">
+                    <img src="img/videoediting.jpeg">
+                </div>
+            </div>
+        </div>
+        <div class="journey">
+            <div class="journeytext">
+                <h2>Creation of the website</h2>
+                <h3>Planning the Website</h3>
+                <p>After completing our video, we decided to make a website dedicated to advertising our effort. For some of us, 
+                    this is the first time we have embarked on such a large-scale project. Therefore, proper planning 
+                    was necessary in order to create an orderly website that can appeal to the users.
+                    Through thorough planning we came up with the name and the overall design of this website. We also decided
+                    the content we wanted to add including the video itself. As soon as the planning was done, we quickly started working
+                    on this website. Thanks to our meticulous planning, you are able to view this website today.
+                </p>
+                <br>
+                <h3>Coding the Website</h3>
+                <p>From the planning, we came up with an overall draft of this website. We refer to draft for most of our design
+                    choices. This website was written in Hypertext Markup Language (HTML) and Cascading Style Sheet (CSS) as it is needed
+                    for web creation. We spent a lot of time trying to get used to the languages and eventually was able to pull through.
+                    We extensively used a lot of HTML and CSS functions such as hyperlinks, tables and much more! Overall, this part
+                    of the process was really fun.
+                </p>
+                <br>
+                <h3>Gathering Images</h3>
+                <p>To furthermore strengthen our desire to appeal towards a younger audience, we gathered a lot of images mostly to be used
+                    as a background image for some of our web pages. Many of these background images are from popular "Animes" that
+                    a lot of youngsters and youths can relate to. We also had to gather pictures of ourselves.
+                </p>
+            </div>
+            <div class="journeyimg">
+                <img src="img/gaming.png">
+            </div>
+        </div>
         <footer>
             <h4>Contact for Queries:</h4>
             <p>Email: SHAWN.HUANG.QI@student.mmu.edu.my</p>
